# graphistasis

./: .gitignore  2.0  README.md  graphistasis.ipynb  pca_viz.ipynb  pyproject.toml  viz.ipynb
data/: schizophrenia_D012559.tsv
models/: GAT.pt  GCN.pt  SAGE.pt  mlp_epistasis.pt  mlp_epistasis_new_tuned_model_full.pt  mlp_tuned_model.pth
scripts/: gnn_utils.py  graph_construction.py  new_model.py  unpack.sh  utils.py
src/: requirements.txt
src/scripts/: graph_construction.py  unpack.sh
